# catalyst

./: .actrc.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  BETTER_AUTH_ANALYSIS_REPORT.md  CATALYST_DIFFERENTIATION.md  CLAUDE.md  CONTRIBUTING.md  README-old.md  README.md  SECURITY.md  audit.md  backend-docs.md  docker-compose.yml  frontend-plan.md  infer-login-fields.js  parity.md  plan.md  test-api-integration.sh  test-backend.sh  test-ci-locally.sh  test-ci-quick.sh  test-console-fix.sh  test-e2e-complete.sh  test-e2e-simple.sh  test-e2e.sh  verify-build.sh
.githooks/: pre-commit
.github/: copilot-instructions.md
aero-agent/: Cargo.toml  SYSTEM_SETUP.md  config-e2e.toml  config.toml
aero-backend/: package-lock.json  package.json
aero-frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
catalyst-agent/: .gitignore  Cargo.toml  Dockerfile  SYSTEM_SETUP.md  config-e2e.toml  config.toml  config.toml.example  setup-dev.sh
catalyst-agent/src/: config.rs  errors.rs  file_manager.rs  file_tunnel.rs  firewall_manager.rs  main.rs  network_manager.rs  runtime_manager.rs  storage_manager.rs  system_setup.rs  websocket_handler.rs
catalyst-backend/: .env.example  .eslintignore  .eslintrc.json  .gitignore  BETTER_AUTH_MIGRATION.md  Dockerfile  FEATURES.md  README_BETTER_AUTH.md  SUMMARY.md  check-db.mjs  eslint.config.mjs  generate-better-auth-schema.ts  inspect-auth.ts  package-lock.json  package-lock.json.backup  package.json  quick-check.mjs  schema-additions.prisma  setup-dev.sh  setup.sh  tsconfig.json  update-template-direct.ts  update-template.ts  updated-user-model.prisma  upload-minecraft-template.ts
catalyst-frontend/: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  components.json  eslint.config.js  index.html  package.json  (+5 more)
(+410 files in other folders)
