[package]
name = "catalyst-agent"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio-tungstenite = "0.21"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
anyhow = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
lazy_static = "1.4"
regex = "1.10"
sha2 = "0.10"
base64 = "0.21"
sysinfo = "0.30"
nix = { version = "0.28", features = ["fs"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
